# matrixmedical-vai

./: README.md
reukgtomotussourcecode/vai-matrix-ukg-bill-final/: .dockerignore  .env  .env.dev  .env.example  .env.prod  BATCH_JOB_FLOW.md  Dockerfile  README.md  UKG_BILL_API_Collection.postman_collection.json  UKG_BILL_API_Environment.postman_environment.json  build-bill-entity.py  build-bill-invoice.py  build-bill-vendor.py  docker-compose.azure.yml  docker-compose.yml  matrix-ukg-bill.env  orchestrate_people_import.py  process-bill-payment.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-ap-batch.py  run-bill-batch.py  upsert-bill-entity.py  upsert-bill-invoice.py  upsert-bill-vendor.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/common/: __init__.py  correlation.py  formatters.py  notifications.py  redaction.py  report_generator.py  validators.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/common/notifications/: factory.py  noop.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/config/: .env.example  selectors.yaml
reukgtomotussourcecode/vai-matrix-ukg-bill-final/deprecated/: __init__.py  build-bill-entity.py  build-bill-invoice.py  build-bill-vendor.py  process-bill-payment.py  run-ap-batch.py  upsert-bill-entity.py  upsert-bill-invoice.py  upsert-bill-vendor.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/docs/: ARCHITECTURE.md  CONDENSED_COST_CENTER.md  CONFIGURAR_CAMPOS_ADICIONALES.md  MAPEO_LOCAL_RECOMENDADO.md  MAPEO_UKG_BILL_CAMPOS.md  PROBLEMA_RETIRED.md  RETIRED_CAMPO_NO_ACTUALIZABLE.md  curl-probar-retired.txt  curl-update-retired.txt
reukgtomotussourcecode/vai-matrix-ukg-bill-final/scraping/: .gitignore  README.md  __init__.py  cli.py  orchestrator.py  requirements-scraping.txt  run-bill-user-scrape.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/scraping/config/: __init__.py  selectors.py  settings.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/scraping/page_objects/: __init__.py  base.py  company_selector.py  import_modal.py  login_page.py  people_page.py  popup_handler.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/scraping/services/: __init__.py  browser_service.py  data_extractor.py  result_saver.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/src/: __init__.py  __main__.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/src/application/: __init__.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/src/domain/: __init__.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/src/infrastructure/: __init__.py  compat.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/src/presentation/: __init__.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/tests/: __init__.py  conftest.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/tests/integration/: __init__.py  test_bill_ap_integration.py  test_bill_se_integration.py  test_e2e.py  test_http_retry_integration.py  test_sync_pipeline_integration.py  test_ukg_client_integration.py
reukgtomotussourcecode/vai-matrix-ukg-bill-final/tests/unit/: test_correlation.py  test_notifications.py  test_redaction.py  test_validators.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/: .dockerignore  .env  .env.dev  .env.example  .env.prod  Dockerfile  README.md  Sequential API Calls with curl Examples.litcoffee  build-motus-driver.py  debug-api.py  motus-get-token.py  notify.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-motus-batch.py  upsert-motus-driver.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/_deprecated/: build-motus-driver.py  debug-api.py  notify.py  run-motus-batch.py  upsert-motus-driver.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/api-documentation/: Audit-Log-Reports Tara.xlsx  additional-endpoints  driverapi.yaml
reukgtomotussourcecode/vai-matrix-ukg-motus-final/common/: correlation.py  secrets_manager.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/common/notifications/: __init__.py  aws_ses.py  sendgrid.py  smtp.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/postman/: MOTUS_Debug_API.postman_collection.json  MOTUS_Environment.postman_environment.json
reukgtomotussourcecode/vai-matrix-ukg-motus-final/src/: __init__.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/src/application/: __init__.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/src/presentation/: __init__.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/tests/: __init__.py  conftest.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/tests/fixtures/: __init__.py  mock_data.py  motus_mocks.py  ukg_mocks.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/tests/integration/: __init__.py  test_api_scenarios.py  test_debug_api_e2e.py  test_e2e.py  test_e2e_extended.py  test_eeids.py  test_token_flow.py
reukgtomotussourcecode/vai-matrix-ukg-motus-final/tests/unit/: __init__.py  test_build_motus_driver.py  test_job_code_filter.py  test_leave_status.py  test_manager_field.py  test_motus_get_token.py  test_notify.py  test_rate_limiter.py  test_run_motus_batch.py  test_upsert_motus_driver.py
reukgtomotussourcecode/vai-matrix-ukg-travelperk-final/: .dockerignore  .env  .env.dev  .env.example  .env.prod  .gitignore  BATCH_JOB_FLOW.md  Dockerfile  README.md  build-travelperk-user.py  docker-compose.azure.yml  docker-compose.yml  docker-entrypoint.sh  matrix-ukg-tp.env  process-review.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-travelperk-batch.py  upsert-travelperk-user.py
reukgtomotussourcecode/vai-matrix-ukg-travelperk-final/azure/: deploy.sh  env.prod.sh.example
reukgtomotussourcecode/vai-matrix-ukg-travelperk-final/common/: __init__.py  correlation.py  metrics.py  secrets_manager.py
reukgtomotussourcecode/vai-matrix-ukg-travelperk-final/common/notifications/: base.py  config.py
reukgtomotussourcecode/vai-matrix-ukg-travelperk-final/deprecated/: __init__.py  rate_limiter_old.py
reukgtomotussourcecode/vai-matrix-ukg-travelperk-final/src/: __init__.py
reukgtomotussourcecode/vai-matrix-ukg-travelperk-final/tests/: __init__.py  conftest.py
(+234 files in other folders)
